# aoc25

./: .gitignore  pyproject.toml
src/aoc/: cli.py  template.py
src/aoc/days/: __init__.py  day01.py  day02.py  day03.py  day04.py
