[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc"
version = "2025.0.0"
description = "Advent of Code 2025"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer[all]>=0.9.0",
]

[project.scripts]
aoc = "aoc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc"]
